--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.1",
     "webpack-dev-server": "^3.8.2"
