--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.0",
+    "styled-components": "^4.4.0",
     "webpack": "^4.41.1",
     "webpack-dev-server": "^3.8.2"
   },
