--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.3",
     "styled-components": "^4.4.0",
     "webpack": "^4.41.1",
     "webpack-dev-server": "^3.8.2"
