--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,17 @@
-# {
-#     "extends": ["eslint:recommended", "plugin:react/recommended"],
-#     "env": {
-#         "es6": true
-#     },
-#     "parserOptions": {
-#         "ecmaVersion": 6,
-#         "sourceType": "module",
-#         "ecmaFeatures": {
-#             "jsx": true
-#         }
-#     },
-#     "rules": {
-#         "semi": "error"
-#     }
-# }{
-{  
-    "env": {
-        "browser": true,
-        "node": true
-    }
+ {
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
+    "parser": "babel-eslint",
+     "env": {
+         "es6": true
+     },
+     "parserOptions": {
+         "ecmaVersion": 6,
+         "sourceType": "module",
+         "ecmaFeatures": {
+             "jsx": true
+         }
+     },
+     "rules": {
+         "semi": "error"
+     }
 }
