--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,21 @@
- {
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
+{
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:prettier/recommended"
+    ],
     "parser": "babel-eslint",
-     "env": {
-         "es6": true
-     },
-     "parserOptions": {
-         "ecmaVersion": 6,
-         "sourceType": "module",
-         "ecmaFeatures": {
-             "jsx": true
-         }
-     },
-     "rules": {
-         "semi": "error"
-     }
+    "env": {
+        "browser": true
+    },
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
+    },
+    "rules": {
+        "semi": "error"
+    }
 }
