--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     ],
     "parser": "babel-eslint",
     "env": {
-        "browser": true
+        "browser": true,
+        "node": true
     },
     "parserOptions": {
         "ecmaVersion": 6,
