회원가입 작업

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,10 +17,6 @@
         }
     },
     "rules": {
-        "semi": "error",
-        "react/jsx-max-props-per-line": [
-            "error",
-            {"maximum": 1}
-        ]
+        "semi": "error"
     }
 }
