--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "style-loader": "^1.1.3",
     "styled-components": "^4.4.0",
     "webpack": "^4.41.1",
-    "webpack-dev-server": "^3.8.2"
+    "webpack-dev-server": "^3.8.2",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.9"
