--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "parser": "babel-eslint",
     "env": {
         "browser": true,
-        "node": true
+        "node": true,
+        "es6": true
     },
     "parserOptions": {
         "ecmaVersion": 6,
