eslint react version add

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,5 +19,10 @@
     },
     "rules": {
         "semi": "error"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
