바로가기 경로 추가

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,6 +9,9 @@
             "Ui/*": [
                 "src/ui/*"
             ],
+            "Pages/*": [
+                "src/pages/*"
+            ],
             "Comp/*": [
                 "src/components/*"
             ],
