경로명 변경 ui >> style

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,8 +6,8 @@
             "Src/*": [
                 "src/*"
             ],
-            "Ui/*": [
-                "src/ui/*"
+            "Style/*": [
+                "Style/*"
             ],
             "Pages/*": [
                 "src/pages/*"
