--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.16.0",
+    "file-loader": "^5.1.0",
     "formik": "^2.1.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -40,14 +41,17 @@
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.0",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^1.1.3",
     "styled-components": "^5.0.1",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.1",
     "webpack-dev-server": "^3.8.2",
     "yup": "^0.28.1"
