--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "slick-carousel": "^1.8.1",
     "style-loader": "^1.1.3",
     "styled-components": "^5.0.1",
+    "styled-normalize": "^8.0.7",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.1",
     "webpack-dev-server": "^3.8.2",
